Finished staff CRUD

--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -77,7 +77,7 @@
 							#[pre]#[/pre]
 
 							#[each]
-							<input type="checkbox" name="permission-#id" id="permission-#id" value="yes"/>
+							<input type="checkbox" class="crud-list-prefill-permission-ids" name="permission-#id" id="permission-#id" value="#id"/>
 							<label for="permission-#id">#description</label><br />
 							#[/each]
 
