Cleaned up permissions summary code

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -123,7 +123,7 @@
 								<li#[if: current-page = staff] class="active"#[/if]>
 									<a href="/staff"><i class="fa fa-fw fa-user-md"></i> Staff Accounts</a>
 								</li>
-								<li#[if: current-page = staff] class="active"#[/if]>
+								<li#[if: current-page = staff-roles] class="active"#[/if]>
 									<a href="/staff-roles"><i class="fa fa-fw fa-stethoscope"></i> Staff Roles</a>
 								</li>
 							</ul>
