--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -72,7 +72,7 @@
     </div>
 </div>
 
-<script src="/js/cameras.js"></script>
+<script src="/js/camera-types.js"></script>
 
 #[def: entity-name-title = Camera Type]
 #[def: entity-name-body = camera type]
