--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -108,7 +108,7 @@
 								<li#[if: current-page = cameras] class="active"#[/if]>
 									<a href="/cameras"><i class="fa fa-fw fa-camera"></i> Cameras</a>
 								</li>
-								<li#[if: current-page = cameras] class="active"#[/if]>
+								<li#[if: current-page = camera-types] class="active"#[/if]>
 									<a href="/camera-types"><i class="fa fa-fw fa-camera"></i> Camera Types</a>
 								</li>
 								<li#[if: current-page = therapies] class="active"#[/if]>
