moved buttons on all html pages to above the tables

--- a/src/main/resources/static/medicines.html
+++ b/src/main/resources/static/medicines.html
@@ -6,6 +6,9 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
+        <div class="text-right">
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add medicine</button>
+        </div>
 		<table class="table table-bordered table-hover">
 			<thead>
 				<tr>
@@ -44,11 +47,6 @@
 			</tbody>
 		</table>
 
-		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add
-				medicine
-			</button>
-		</div>
 	</div>
 </div>
 
