--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -6,6 +6,9 @@
 
 <div class="row">
 	<div class="col lg-12 col md-12">
+        <div class="text-right">
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role</button>
+        </div>
 		<table class="table table-bordered table-hover">
 			<thead>
 
@@ -44,10 +47,6 @@
 				#[/collection]
 			</tbody>
 		</table>
-		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Role
-			</button>
-		</div>
 	</div>
 </div>
 
