--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-lg-12 col-md-12">
         <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add a Camera Type</button>
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Camera Type</button>
         </div>
         <table class="table table-bordered table-hover">
             <thead>
