--- a/src/main/resources/static/medicines.html
+++ b/src/main/resources/static/medicines.html
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="col-lg-12 col-md-12">
         <div class="text-right">
-            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add medicine</button>
+            <button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i> &nbsp;Add Medicine</button>
         </div>
 		<table class="table table-bordered table-hover">
 			<thead>
