created a staff selection page

--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -2,6 +2,7 @@
 </div>
 </div>
 <script src="/js/core/bootstrap.min.js"></script>
+<script src="/js/global.js"></script>
 #[if: crud]
 <script src="/js/plugins/toastr/toastr.min.js"></script>
 <script src="/js/crud-page.js"></script>
