Nearly finished staff absence CRUD

--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -96,6 +96,6 @@
 ##_delete-modal.html
 ##_loading-modal.html
 
-#[collectionmap: objectMap: staff-absence]
+#[collectionmap: objectMap: staff-absences]
 
 ##_footer.html
