--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,7 +1,7 @@
 #[def: title = Login]
 #[def: current-page = login]
 ##_login-header.html
-<body onload="keepFocus('username')">
+<body>
     <div class="row">
         <div class="col-lg-12 col-md-12">
             <div class="container">
@@ -15,17 +15,17 @@
                         <form id="login-form" action="/login" method="post">
                             #[!if: stage = 2]
                             #[if: error-bad-staff-id]
-                            <div class="alert alert-danger login-alert">
+                            <div class="alert alert-danger login-message">
                                 <p><strong>Error:</strong> that staff ID wasn't recognised - are you sure you have an account?</p>
                             </div>
                             #[/if]
                             #[if: error-bad-password]
-                            <div class="alert alert-danger login-alert">
+                            <div class="alert alert-danger login-message">
                                 <p><strong>Error:</strong> incorrect password.</p>
                             </div>
                             #[/if]
                             #[if: error-bad-status]
-                            <div class="alert alert-danger login-alert">
+                            <div class="alert alert-danger login-message">
                                 <p><strong>Error:</strong> your account is currently disabled.</p>
                             </div>
                             #[/if]
@@ -37,7 +37,7 @@
 
                             #[if: stage = 2]
                             <input type="hidden" name="username" value="#username"/>
-                            <p class="login-label">Hello, <strong>#staffname</strong>.</p>
+                            <p class="alert alert-info login-message">Hello, <strong>#staffname</strong>.</p>
                             <div class="form-group">
                                 <label class="login-label" for="password">Please enter your password or PIN and press enter.</label>
                                 <input class="form-control login-field" type="password" name="password" id="password"/>
@@ -45,7 +45,15 @@
                             #[/if]
 
                             <div class="login-button">
-                                <button type="button" id="login-continue-button" class="btn btn-success" onclick="submitForm()">Continue <i class="fa fa-arrow-right"></i></button>
+                                <button type="submit" class="btn btn-success">
+                                    #[!if: stage = 2]
+                                    Continue
+                                    #[/!if]
+                                    #[if: stage = 2]
+                                    Login
+                                    #[/if]
+                                    <i class="fa fa-arrow-right"></i>
+                                </button>
                             </div>
 
                         </form>
@@ -55,4 +63,4 @@
         </div>
     </div>
 </body>
-##_footer.html
+</html>
