Login panel floats in middle of page

--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -83,12 +83,7 @@
 
 				<!-- Sidebar Menu Items -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
-					<ul class="nav navbar-nav side-nav#[!if: logged-in = no] hide#[/if]">
-						<li class="active">
-							<a href="/login"><i class="fa fa-fw fa-key"></i> Login</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav side-nav#[!if: logged-in = yes] hide#[/if]">
+					<ul class="nav navbar-nav side-nav">
 						<li#[if: current-page = dashboard] class="active"#[/if]>
 							<a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
 						</li>
