--- a/src/main/resources/static/_login-header.html
+++ b/src/main/resources/static/_login-header.html
@@ -11,6 +11,7 @@
 		<link href="/css/core/bootstrap.min.css" rel="stylesheet"/>
 		<link href="/css/core/sb-admin.css" rel="stylesheet"/>
 		<link href="/css/custom-tweaks.css" rel="stylesheet"/>
+		<link href="/css/login.css" rel="stylesheet"/>
 		<link href="/css/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 		#[if: crud]
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
