Fixed CSS height bug

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,7 @@
 ##_login-header.html
 <body>
 	<div class="container">
-		<div class="panel panel-default login-panel">
+		<div class="panel panel-default login-panel stage-#stage">
 			<div class="panel-heading login-panel-heading">
 				<h4>
 					NHS Chelsea & Westminster Hospital
