--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -55,7 +55,7 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal edit-form">
-                    <input type="hidden" name="entity-type" value="camera"/>
+                    <input type="hidden" name="entity-type" value="camera-type"/>
                     <input type="hidden" name="entity-id" value="0"/>
                     <div class="form-group">
                         <label for="label" class="col-sm-3 control-label">Label</label>
