--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -61,23 +61,32 @@
 				<h3 class="create-mode">Create Patient</h3>
 			</div>
 			<div class="modal-body">
-				<form class="edit-form form-inline text-center">
-					<input type="hidden" name="entity-type" value="patient"/>
-					<input type="hidden" name="entity-id" value="0"/>
+                <form class="form-horizontal edit-form">
+                    <input type="hidden" name="entity-type" value="patient"/>
+                    <input type="hidden" name="entity-id" value="0"/>
+                    <div class="form-group">
+                        <label for="name" class="col-sm-3 control-label">Name</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="name" id="name"/>
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="hospital-number" class="col-sm-3 control-label">Hospital Number</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="hospital-number" id="hospital-number"/>
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="date-of-birth" class="col-sm-3 control-label">Date of Birth</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="date-of-birth" id="date-of-birth"/>
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
 
-					<div class="form-group text-center">
-						<label for="name">Name:</label>
-						<input type="text" name="name" id="name"/>
-					</div>
-					<div class="form-group text-center">
-						<label for="hospital-number">Hospital Number:</label>
-						<input type="text" name="hospital-number" id="hospital-number"/>
-					</div>
-					<div class="form-group text-center">
-						<label for="date-of-birth">Date of Birth:</label>
-						<input type="text" name="date-of-birth" id="date-of-birth"/>
-					</div>
-				</form>
+                </form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-cancel">Cancel</button>
