--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -98,14 +98,14 @@
                             <p class="help-block">Example block-level help text here.</p>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group create-mode">
                         <label for="password" class="col-sm-3 control-label">Password</label>
                         <div class="col-sm-9">
                             <input class="form-control" type="password" name="password" id="password"/>
                             <p class="help-block">Example block-level help text here.</p>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group create-mode">
                         <label for="password_check" class="col-sm-3 control-label">Repeat Password</label>
                         <div class="col-sm-9">
                             <input class="form-control" type="password" name="password_check" id="password_check"/>
