--- a/src/main/resources/static/medicines.html
+++ b/src/main/resources/static/medicines.html
@@ -71,8 +71,8 @@
                     <div class="form-group">
                         <label for="order-time" class="col-sm-3 control-label">Order Time</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="text" name="order-time" id="order-time" placeholder="This is the order lead time in days"/>
-                            <p class="help-block">Example block-level help text here.</p>
+                            <input class="form-control" type="text" name="order-time" id="order-time"/>
+                            <p class="help-block">This is the order lead time in days.</p>
                         </div>
                     </div>
 
