--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -63,21 +63,28 @@
 				<h3 class="create-mode">Create Absence</h3>
 			</div>
 			<div class="modal-body">
-				<form class="edit-form form-inline text-center">
-					<input type="hidden" name="entity-type" value="staff-absence"/>
-					<input type="hidden" name="entity-id" value="0"/>
+                <form class="form-horizontal edit-form">
+                    <input type="hidden" name="entity-type" value="staff-absence"/>
+                    <input type="hidden" name="entity-id" value="0"/>
 
-					<input type="hidden" name="staff-id" value="#staff-id"/>
+                    <input type="hidden" name="staff-id" value="#staff-id"/>
 
-					<div class="form-group">
-						<label for="from">From:</label>
-						<input type="text" name="from" id="from"/>
-					</div>
-					<div class="form-group">
-						<label for="to">To:</label>
-						<input type="text" name="to" id="to"/>
-					</div>
-				</form>
+                    <div class="form-group">
+                        <label for="from" class="col-sm-3 control-label">From</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="from" id="from"/>
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="to" class="col-sm-3 control-label">To</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" type="text" name="to" id="to"/>
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
+                </form>
+
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-cancel">Cancel</button>
