--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-		<p><em>Editing staff availabilities for <strong>#staff-name</strong>.</em></p>
+		<p><em>Editing default availabilities for <strong>#staff-name</strong>.</em></p>
 	</div>
 </div>
 
@@ -18,9 +18,10 @@
 		<table class=" table table-bordered table-hover">
 			<thead>
 				<tr>
-					<th class="text-center">From</th>
-					<th class="text-center">To</th>
-					<th class="text-center">Action</th>
+					<th class="text-center">Start time</th>
+					<th class="text-center">End time</th>
+					<th class="text-center">Day of week</th>
+                    <th class="text-center">Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -32,6 +33,17 @@
 				<tr>
 					<td>#from</td>
 					<td>#to</td>
+                    <td>
+                        <select>
+                            <option value="1" selected="#[if: day=1]selected#[/if]">Monday</option>
+                            <option value="2" selected="#[if: day=2]selected#[/if]">Tuesday</option>
+                            <option value="3" selected="#[if: day=3]selected#[/if]">Wednesday</option>
+                            <option value="4" selected="#[if: day=4]selected#[/if]">Thursday</option>
+                            <option value="5" selected="#[if: day=5]selected#[/if]">Friday</option>
+                            <option value="6" selected="#[if: day=6]selected#[/if]">Saturday</option>
+                            <option value="7" selected="#[if: day=7]selected#[/if]">Sunday</option>
+                        </select>
+                    </td>
 					<td>
 						<button class="btn edit-button" data-id="#id">Edit</button>
 						<button class="btn delete-button" data-id="#id">Delete</button>
@@ -68,15 +80,27 @@
 					<input type="hidden" name="entity-id" value="0"/>
 
 					<input type="hidden" name="staff-id" value="#staff-id"/>
-
+i
 					<div class="form-group">
-						<label for="from">From:</label>
-						<input type="text" name="from" id="from"/>
+						<label for="startTime">Start time:</label>
+						<input type="text" name="startTime" id="startTime"/>
 					</div>
 					<div class="form-group">
-						<label for="to">To:</label>
-						<input type="text" name="to" id="to"/>
+						<label for="endTime">End time:</label>
+						<input type="text" name="endTime" id="endTime"/>
 					</div>
+                    <div class="form-group">
+                        <label for="dayOfWeek">Day of week:</label>
+                        <select name="dayOfWeek" id="dayOfWeek">
+                            <option value="1">Monday</option>
+                            <option value="2">Tuesday</option>
+                            <option value="3">Wednesday</option>
+                            <option value="4">Thursday</option>
+                            <option value="5">Friday</option>
+                            <option value="6">Saturday</option>
+                            <option value="7">Sunday</option>
+                        </select>
+                    </div>
 				</form>
 			</div>
 			<div class="modal-footer">
@@ -89,9 +113,9 @@
 
 <script src="/js/staff-availabilities.js"></script>
 
-#[def: entity-name-title = Staff Availabilities]
-#[def: entity-name-body = staff availabilities]
-#[def: entity-type = staff-availabilities]
+#[def: entity-name-title = Staff Availability]
+#[def: entity-name-body = staff availability]
+#[def: entity-type = staff-availability]
 
 ##_delete-modal.html
 ##_loading-modal.html
