--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -73,7 +73,10 @@
                     <div class="form-group">
                         <label for="username" class="col-sm-3 control-label">Username</label>
                         <div class="col-sm-9">
-                            <input class="form-control" type="text" name="username" id="username"/>
+                            <div class="input-group">
+                                <input class="form-control" type="text" name="username" id="username">
+                                <span class="input-group-addon"><i class="fa fa-barcode"></i></span>
+                            </div>
                             <p class="help-block">We suggest you use the barcode scanner here.</p>
                         </div>
                     </div>
