added padlock icon to password field in login.html

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -34,8 +34,8 @@
 					</div>
 					#[/if]
 					<div class="form-group">
-						<label class="login-label text-center" for="username">Enter your ID below and press enter, or scan your ID card.</label>
-                        <div class="barcode-field input-group">
+						<label class="login-label" for="username">Enter your ID below and press enter, or scan your ID card.</label>
+                        <div class="icon-field input-group">
 						    <input class="form-control" type="text" name="username" id="username" value="#username"/>
                             <span class="input-group-addon"><i class="fa fa-barcode"></i></span>
                         </div>
@@ -47,7 +47,10 @@
 					<p class="alert alert-info login-message">Hello, <strong>#staffname</strong>.</p>
 					<div class="form-group">
                         <label class="login-label" for="password">Please enter your password or PIN and press enter.</label>
-                        <input class="form-control login-field" type="password" name="password" id="password"/>
+                        <div class="icon-field input-group">
+                            <input class="form-control" type="password" name="password" id="password"/>
+                            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                        </div>
 					</div>
 					#[/if]
 
